--- a/miss_hit.cfg
+++ b/miss_hit.cfg
@@ -1,9 +1,9 @@
 enable: 0
 line_length: 120
 suppress_rule: "copyright_notice"
-regex_attribute_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
+regex_attribute_name: "[a-zA-Z][a-z0-9]*(_[a-z0-9]+)*"
 regex_function_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
 regex_nested_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
 regex_method_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
-regex_parameter_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
+regex_parameter_name: "[a-zA-Z][a-z0-9]*(_[a-z0-9]+)*"
 regex_script_name: "[a-z][a-z0-9]*(_[a-z0-9]+)*"
